--- a/finanzas-api/Finanzas.Api/Finanzas.Api.csproj
+++ b/finanzas-api/Finanzas.Api/Finanzas.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Fiananzas.Infraestructure\Fiananzas.Infraestructure.csproj" />
+    <ProjectReference Include="..\Finanzas.Infraestructure\Finanzas.Infraestructure.csproj" />
     <ProjectReference Include="..\Finanzas.ServiceCore\Finanzas.ServiceCore.csproj" />
   </ItemGroup>
 
