+semver:fin Se carga avance repository conectado por medio de interfaces, se expone interfaces

--- a/finanzas-api/Finanzas.Infraestructure/Finanzas.Infraestructure.csproj
+++ b/finanzas-api/Finanzas.Infraestructure/Finanzas.Infraestructure.csproj
@@ -168,6 +168,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IDeudaRepository.cs" />
+    <Compile Include="Interfaces\IUsuarioRepository.cs" />
+    <Compile Include="Interfaces\IPagoRepository.cs" />
     <Compile Include="Models\Deuda.cs" />
     <Compile Include="Models\Pago.cs" />
     <Compile Include="Models\Usuario.cs" />
@@ -180,6 +183,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\Finanzas.Api\packages\System.ValueTuple.4.6.1\build\net471\System.ValueTuple.targets" Condition="Exists('..\Finanzas.Api\packages\System.ValueTuple.4.6.1\build\net471\System.ValueTuple.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
