--- a/finanzas-api/Finanzas.ServiceCore/Finanzas.ServiceCore.csproj
+++ b/finanzas-api/Finanzas.ServiceCore/Finanzas.ServiceCore.csproj
@@ -48,6 +48,9 @@
     <Compile Include="Models\Pago.cs" />
     <Compile Include="Models\Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\DeudaService.cs" />
+    <Compile Include="Service\PagoService.cs" />
+    <Compile Include="Service\UsuarioService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Finanzas.Infraestructure\Finanzas.Infraestructure.csproj">
@@ -57,7 +60,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Interfaces\" />
-    <Folder Include="Service\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
