--- a/finanzas-api/Finanzas.Api/Finanzas.Api.csproj
+++ b/finanzas-api/Finanzas.Api/Finanzas.Api.csproj
@@ -7,10 +7,12 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="Service\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.66" />
+    <PackageReference Include="StackExchange.Redis" Version="2.9.11" />
   </ItemGroup>
 
   <ItemGroup>
