+semver:fix se sincroniza espacios de nombres se agrega instacia de repositorios

--- a/finanzas-api/Finanzas.Api/Finanzas.Api.csproj
+++ b/finanzas-api/Finanzas.Api/Finanzas.Api.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>finanzas_api</RootNamespace>
+    <RootNamespace>Finanzas.Api</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
