+semver:fix se realiza cambios para cargar controladores

--- a/finanzas-api/Finanzas.Api/Properties/launchSettings.json
+++ b/finanzas-api/Finanzas.Api/Properties/launchSettings.json
@@ -12,15 +12,15 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "deuda",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "finanzas_api": {
+    "Finanzas.Api": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "deuda",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
