--- a/finanzas-api/Finanzas.Api/appsettings.Development.json
+++ b/finanzas-api/Finanzas.Api/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=PRIJHOHANAVS\\SQLEXPRESS;Database=FinanzasDB;User Id=sa;Password=Jhohan98707301*;TrustServerCertificate=True;",
-    "RedisConnection": "localhost:6379"
+    "RedisConnection": "A27xqxmtjv0pcnh3l24wxs514qbowdj71ocpkj1zzr5d5qtnbd9"
   },
   "Cache": {
     "DeudasMinutes": 1
