--- a/finanzas-api/Finanzas.Api/appsettings.Development.json
+++ b/finanzas-api/Finanzas.Api/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=PRIJHOHANAVS\\SQLEXPRESS;Database=FinanzasDB;User Id=sa;Password=Jhohan98707301*;TrustServerCertificate=True;",
-    "RedisConnection": "A27xqxmtjv0pcnh3l24wxs514qbowdj71ocpkj1zzr5d5qtnbd9"
+    "RedisConnection": "redis-cli -u redis://<jhohan>:<Santiago0520*>@redis-11115.c56.east-us.azure.redns.redis-cloud.com:11115"
   },
   "Cache": {
     "DeudasMinutes": 1
