--- a/finanzas-api/Finanzas.Api/Finanzas.Api.csproj
+++ b/finanzas-api/Finanzas.Api/Finanzas.Api.csproj
@@ -14,6 +14,7 @@
 		<PackageReference Include="Dapper" Version="2.1.66" />
 		<PackageReference Include="StackExchange.Redis" Version="2.9.11" />
 		<PackageReference Include="Microsoft.Extensions.Options" Version="9.0.8" />
+		<PackageReference Include="Microsoft.Data.SqlClient" Version="2.1.4" />
 	</ItemGroup>
 
 	<ItemGroup>
