--- a/finanzas-api/Finanzas.ServiceCore/packages.config
+++ b/finanzas-api/Finanzas.ServiceCore/packages.config
@@ -9,12 +9,10 @@
   <package id="Microsoft.Data.SqlClient.SNI" version="6.0.2" targetFramework="net48" />
   <package id="Microsoft.Extensions.Caching.Abstractions" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Caching.Memory" version="8.0.1" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Configuration" version="10.0.0-preview.7.25380.108" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="10.0.0-preview.7.25380.108" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.2" targetFramework="net48" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="8.0.3" targetFramework="net48" />
   <package id="Microsoft.Extensions.Options" version="8.0.2" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Primitives" version="10.0.0-preview.7.25380.108" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.Identity.Client" version="4.73.1" targetFramework="net48" />
   <package id="Microsoft.Identity.Client.Extensions.Msal" version="4.73.1" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Abstractions" version="7.7.1" targetFramework="net48" />
@@ -23,16 +21,17 @@
   <package id="Microsoft.IdentityModel.Protocols" version="7.7.1" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="7.7.1" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Tokens" version="7.7.1" targetFramework="net48" />
-  <package id="System.Buffers" version="4.6.1" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.ClientModel" version="1.5.1" targetFramework="net48" />
   <package id="System.Data.Common" version="4.3.0" targetFramework="net48" />
+  <package id="System.Data.SqlClient" version="4.9.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net48" />
   <package id="System.IdentityModel.Tokens.Jwt" version="7.7.1" targetFramework="net48" />
   <package id="System.IO.FileSystem.AccessControl" version="5.0.0" targetFramework="net48" />
-  <package id="System.Memory" version="4.6.3" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Memory.Data" version="8.0.1" targetFramework="net48" />
-  <package id="System.Numerics.Vectors" version="4.6.1" targetFramework="net48" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.2" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
   <package id="System.Security.AccessControl" version="5.0.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.Pkcs" version="8.0.1" targetFramework="net48" />
   <package id="System.Security.Cryptography.ProtectedData" version="4.5.0" targetFramework="net48" />
@@ -40,5 +39,5 @@
   <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net48" />
   <package id="System.Text.Json" version="8.0.5" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
-  <package id="System.ValueTuple" version="4.6.1" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
