--- a/.gitignore
+++ b/.gitignore
@@ -426,4 +426,7 @@ FodyWeavers.xsd
 .history
 .ionide
 
+.angular/
+dist/
+
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode
