--- a/finanzas-ui/.gitignore
+++ b/finanzas-ui/.gitignore
@@ -1,23 +1,23 @@
-# Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode
-# Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode
+# Node / Angular
+node_modules/
+dist/
+.angular/
+npm-debug.log
+yarn-error.log
 
-### VisualStudioCode ###
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-!.vscode/*.code-snippets
+# VS / .NET
+bin/
+obj/
+.vs/
+*.user
+*.suo
+*.swp
+*.dbmdl
 
-# Local History for Visual Studio Code
-.history/
+# Logs
+*.log
+logs/
 
-# Built Visual Studio Code Extensions
-*.vsix
-
-### VisualStudioCode Patch ###
-# Ignore all local history of files
-.history
-.ionide
-
-# End of https://www.toptal.com/developers/gitignore/api/visualstudiocode
+# Environment files
+.env
+.env.*
