+semver:fix se implmentan cambios para redis

--- a/finanzas-api/Finanzas.Api/appsettings.Development.json
+++ b/finanzas-api/Finanzas.Api/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=PRIJHOHANAVS\\SQLEXPRESS;Database=FinanzasDB;User Id=sa;Password=Jhohan98707301*;TrustServerCertificate=True;",
-    "RedisConnection": "redis-11115.c56.east-us.azure.redns.redis-cloud.com:11115,password=Lbhy1J010DiMpU5rBN0c4wOZiuY2dCIX,user=default,ssl=True,abortConnect=False"
+    "RedisConnection": "redis-19132.c240.us-east-1-3.ec2.redns.redis-cloud.com:19132,password=DsivM18ICl6EcyDknaqKzwy87Qmjtw1N,user=default,ssl=True,abortConnect=False"
   },
   "Cache": {
     "DeudasMinutes": 1
