--- a/finanzas-api/Finanzas.Api/Finanzas.Api.csproj
+++ b/finanzas-api/Finanzas.Api/Finanzas.Api.csproj
@@ -15,6 +15,7 @@
 		<PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.1" />
 		<PackageReference Include="StackExchange.Redis" Version="2.9.11" />
 		<PackageReference Include="Microsoft.Extensions.Options" Version="9.0.8" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
 		<PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
 	</ItemGroup>
 
